/*
 * Copyright (c) 2019 Oracle and/or its affiliates. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
option java_package = "io.helidon.microprofile.grpc.server.test";

service UnaryService {
  rpc requestResponse (TestRequest) returns (TestResponse) {}
  rpc responseOnly (Empty) returns (TestResponse) {}
  rpc requestNoResponse (TestRequest) returns (Empty) {}
  rpc noRequestNoResponse (Empty) returns (Empty) {}
  rpc futureResponse (TestRequest) returns (TestResponse) {}
  rpc futureResponseNoRequest (Empty) returns (TestResponse) {}
  rpc unary (TestRequest) returns (TestResponse) {}
  rpc unaryNoRequest (Empty) returns (TestResponse) {}
  rpc unaryFuture (TestRequest) returns (TestResponse) {}
  rpc unaryFutureNoRequest (Empty) returns (TestResponse) {}
}

service ServerStreamingService {
  rpc streaming (TestRequest) returns (stream TestResponse) {}
  rpc stream (TestRequest) returns (stream TestResponse) {}
  rpc streamingNoRequest (Empty) returns (stream TestResponse) {}
  rpc streamNoRequest (Empty) returns (stream TestResponse) {}
}

service ClientStreamingService {
  rpc streaming (stream TestRequest) returns (TestResponse) {}
  rpc futureResponse (stream TestRequest) returns (TestResponse) {}
}

service BidiService {
  rpc bidi (stream TestRequest) returns (stream TestResponse) {}
}

message Empty {
}

message TestRequest {
  string message = 1;
}

message TestResponse {
  string message = 1;
}
